--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon Main.js"
+    "dev": "nodemon Main.js",
+    "start": "node Main.js"
   },
   "keywords": [],
   "author": "",
