--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT = 8080
 
-DB_HOST=srv1415.hstgr.io
-DB_USER=u120939471_cristobal
-DB_DATABASE=u120939471_cristobal
-DB_PASSWORD=zuQ!c|f!i2$N
+DB_HOST=localhost
+DB_USER=root
+DB_DATABASE=capsthon
+DB_PASSWORD=waleyPa
 
 
 USERMAIL=gdress167@gmail.com
